# microscaler-observability

./: .gitignore  AGENTS.md  Cargo.toml  README.md  clippy.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml
docs/: CLUSTER_OBSERVABILITY.md  PRD.md
docs/llmwiki/: README.md  SCHEMA.md  docs-catalog.md  index.md  log.md
docs/llmwiki/entities/: entity-shutdown-guard.md
docs/llmwiki/flows/: init-flow.md
docs/llmwiki/topics/: coding-standards-jsf-inspired.md  hexagonal-architecture.md  otel-version-pinning.md  pragmatic-rust-guidelines.md  sibling-repos-and-wikis.md
docs/references/: jsf-audit-opinion.md  jsf-compliance.md  jsf-writeup.md  rust-guidelines.md
src/: bootstrap.rs  config.rs  error.rs  lib.rs  shutdown.rs
