[package]
name = "microscaler-observability"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Hexagonal observability adapter for microscaler services: owns all OpenTelemetry globals (Tracer / Logger / Meter / Propagator) on behalf of BRRTRouter, Lifeguard, and host apps. Adapters emit tracing events; this crate handles the OTLP egress."
license = "Apache-2.0"
repository = "https://github.com/microscaler/microscaler-observability"
readme = "README.md"
keywords = ["opentelemetry", "tracing", "hexagonal", "microscaler"]
categories = ["development-tools::debugging"]

[lib]
path = "src/lib.rs"

# ---------------------------------------------------------------------------
# OpenTelemetry pins.
#
# The 0.31.x line matches BRRTRouter and is coordinated with lifeguard (see
# ../lifeguard/Cargo.toml). All consumers must share one opentelemetry-api
# major or globals diverge.
#
# BRRTRouter patches the OTLP stack from open-telemetry/opentelemetry-rust git
# for reqwest 0.13; the same [patch.crates-io] block is duplicated here so this
# crate builds standalone and resolves identically when used as a path dep.
# See docs/PRD.md §Phase O.0.
# ---------------------------------------------------------------------------
[dependencies]
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio-current-thread", "trace", "logs"] }
opentelemetry-otlp = { version = "=0.31.0", default-features = false, features = ["grpc-tonic", "trace", "logs"] }
opentelemetry-semantic-conventions = "0.31"
opentelemetry-appender-tracing = { version = "0.31", features = ["experimental_use_tracing_span_context"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "registry", "env-filter", "fmt"] }
tracing-opentelemetry = "0.32"
thiserror = "1"
# OTLP/Tonic builds gRPC channels with `tokio::spawn`; hosts (e.g. BRRTRouter + may) have no
# Tokio runtime in `main`. We own one runtime for the process lifetime when OTLP is enabled.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time"] }

# Optional: Pyroscope continuous profiling (Phase O.12). Off by default.
pyroscope = { version = "2.0", optional = true }
pyroscope_pprofrs = { version = "0.2", optional = true }

[features]
default = []

# Enable push-mode continuous profiling to a Pyroscope server.
# Triggered by `PYROSCOPE_SERVER_ADDRESS` env var when compiled with this feature.
profiling = ["dep:pyroscope", "dep:pyroscope_pprofrs"]

# Protocol variants — gated so a consumer can opt out of the gRPC dep if they
# only need HTTP/protobuf. gRPC is the default; HTTP is an escape hatch.
http-proto = ["opentelemetry-otlp/http-proto"]
http-json = ["opentelemetry-otlp/http-json"]

# Dev-ergonomics layer: a `tracing_subscriber::fmt::Layer` to stdout, used
# when OTEL_EXPORTER_OTLP_ENDPOINT is unset (cargo test, cargo run locally).
# On by default so `cargo test` shows logs; turn off in release builds that
# want "stdout is startup-only" invariant enforced at compile time.
dev-stdout-fallback = []

[dev-dependencies]
# Integration tests spin up an in-process OTLP gRPC receiver to verify end-to-end.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tonic = "0.14"
prost = "0.14"

# Align with BRRTRouter / opentelemetry-otlp 0.31 (reqwest 0.13).
[patch.crates-io]
opentelemetry = { git = "https://github.com/open-telemetry/opentelemetry-rust", rev = "965078315b58ae14725721735f1c8e2bc2d3b445" }
opentelemetry_sdk = { git = "https://github.com/open-telemetry/opentelemetry-rust", rev = "965078315b58ae14725721735f1c8e2bc2d3b445" }
opentelemetry-http = { git = "https://github.com/open-telemetry/opentelemetry-rust", rev = "965078315b58ae14725721735f1c8e2bc2d3b445" }
opentelemetry-otlp = { git = "https://github.com/open-telemetry/opentelemetry-rust", rev = "965078315b58ae14725721735f1c8e2bc2d3b445" }
opentelemetry-proto = { git = "https://github.com/open-telemetry/opentelemetry-rust", rev = "965078315b58ae14725721735f1c8e2bc2d3b445" }
opentelemetry-semantic-conventions = { git = "https://github.com/open-telemetry/opentelemetry-rust", rev = "965078315b58ae14725721735f1c8e2bc2d3b445" }

# ---------------------------------------------------------------------------
# Lints — enforced at CI via `cargo clippy --all-targets --all-features -D warnings`.
#
# Discipline goals (AGENTS.md "Golden rules"):
#   1. Testing is not an afterthought — it starts here at v0.0.1 and grows with
#      every public item added.
#   2. No `unwrap()` / `expect()` / explicit `panic!` on any hot path. Deny from
#      day 1 so the baseline can never regress. Tests opt out locally where
#      asserting-unexpected is idiomatic.
#   3. Clippy `pedantic` + `nursery` groups at deny level, with narrow
#      documented exceptions. No other crate in the microscaler workspace
#      currently enforces nursery — this crate is the strict-baseline template.
# ---------------------------------------------------------------------------

[lints.rust]
# Pure Rust library — no unsafe needed. Forbid is stronger than deny:
# `#[allow(unsafe_code)]` cannot override forbid, so this is a true invariant.
unsafe_code = "forbid"

# Every new public item carries rustdoc. Already asserted via `#![deny]` in
# lib.rs; duplicated here so `cargo clippy` exits non-zero for missing docs
# even if the crate attribute is removed.
missing_docs = "deny"

[lints.clippy]
# =============================================================================
# HOT-PATH DISCIPLINE — the reason this file exists
# =============================================================================
# `unwrap()` and `expect()` panic on `None` / `Err`. In a library function
# called from a host's `main()` during observability init, a panic takes the
# whole process with it. Propagate errors via `Result<T, ObservabilityError>`.
unwrap_used = "deny"
expect_used = "deny"
# Explicit `panic!()` discouraged. Prefer `return Err(...)` or typed errors.
panic = "deny"
# `unreachable!()` panics at runtime — use exhaustive matching or typed errors.
unreachable = "deny"
# Same family: `todo!()` and `unimplemented!()`. Allowed locally on the v0.0.1
# `init()` scaffold stub; denied crate-wide so the next agent can't ship
# placeholder code without the Cargo.toml diff making the exemption obvious.
todo = "deny"
unimplemented = "deny"

# Indexing that can panic on OOB — prefer `.get()` returning Option.
indexing_slicing = "warn"
# Integer arithmetic that can overflow in debug. Warn, not deny — std iterators
# often produce patterns clippy flags that are provably non-overflowing.
arithmetic_side_effects = "warn"

# =============================================================================
# CLIPPY GROUPS — pedantic + nursery at deny, with narrow carve-outs
# =============================================================================
# `priority = -1` lets the individual lint exceptions (listed below) take
# precedence over the group-level setting. This is the documented Cargo way
# to say "deny the whole group except these specific lints".
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Carve-outs from pedantic:
# `x::x` modules are idiomatic Rust re-exports (we use `config::ObservabilityConfig`).
module_name_repetitions = "allow"
module_inception = "allow"
# Requiring an `# Errors` doc section on every `Result`-returning fn is helpful
# but not strictly necessary for internal helpers. Warn so tooling flags them
# without blocking CI.
missing_errors_doc = "warn"
missing_panics_doc = "warn"
# `must_use` suggestions can be spurious on builder-style APIs. Warn.
must_use_candidate = "warn"

# =============================================================================
# ERROR HANDLING HYGIENE
# =============================================================================
let_underscore_must_use = "deny"      # hiding errors by `let _ =` is a bug
let_underscore_future = "deny"

# =============================================================================
# ALLOCATION / PERFORMANCE — informational while the crate is a scaffold
# =============================================================================
clone_on_ref_ptr = "warn"
redundant_clone = "warn"
large_stack_arrays = "warn"
